--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+  "labels": ["dependencies"],
+  "osvVulnerabilityAlerts": true,
   "packageRules": [
     {
       "groupName": "Kotlin & KSP",
